# stratum-hq

./: .gitignore  IDEAS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
attributions/: ffhq.md
examples/: CREDITS.md
scripts/: visualize_example.py
src/stratum/: __init__.py  cli.py  config.py  discovery.py  migrate.py  publish.py  verify.py
src/stratum/dwpose/: __init__.py  detector.py
src/stratum/pipeline/: __init__.py  bucket.py  caption.py  depth.py  dinov3.py  normal.py  pixel.py  pose.py  seg.py  t5.py
src/stratum/sapiens/: __init__.py
tests/: test_core.py  test_publish.py
